--- a/style.css
+++ b/style.css
@@ -33,19 +33,17 @@
   font-family: Helvetica;
   font-size: 20px;
   font-weight: normal;
-  border-left: solid 27px #000000;
+  border-left: solid 20px #000000;
   padding: 10px;
   padding-left: 20px;
 }
 
 #input5 {
-  width: 200px;
-  height: 43px;
   background-color: #000000;
   font-family: Helvetica;
   font-size: 20px;
   font-weight: normal;
   color: #ffffff;
   border: none;
-  padding-left: 10px;
+  padding: 10px;
 }
